--- a/src/bluespec/Makefile
+++ b/src/bluespec/Makefile
@@ -15,5 +15,11 @@ pe:
 	bsc -vdir verilog -e mk_tb_pe -u verilog/mk_pe.v 
 	./a.out
 
+mat_inv:
+	@echo "Compiling tb_mat_inv.bsv..."
+	bsc -verilog -vdir verilog -bdir bsv_build -u tb/tb_mat_inv.bsv
+	bsc -vdir verilog -e mkTb_mat_inv -u verilog/mkTb_mat_inv.v 
+	./a.out
+
 clean:
 	rm verilog/* bsv_build/* a.out
